# recipe-calories

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: gui.rs  main.rs  recipe.rs
